Use orika to map carRequest to Car.class so create and update car object won't have Id at the beginning

--- a/vehicles-api/pom.xml
+++ b/vehicles-api/pom.xml
@@ -94,6 +94,12 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.2</version><!-- or latest version -->
+        </dependency>
     </dependencies>
 
     <build>
